--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "emailjs-com": "^2.6.4",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "smooth-scroll": "^16.1.3"
   },
   "scripts": {
